<resources>
    <string name="app_name">MLReceiptStorer</string>
    <string name="addReceipt">Add A New Receipt</string>
    <string name="plusSign">+</string>
    <string name="selectReceiptPrompt">How would you like to add a new receipt?</string>
    <string name="takePhoto">Take New</string>
    <string name="selectPhoto">Choose Existing</string>
    <string name="cancel">Cancel</string>
    <string name="folder">Folder:</string>
    <string name="total">Total:</string>
    <string name="title">StoReceipt</string>
    <string name="addFolder">Add Folder</string>
    <string name="addFolderTitle">Add A New Folder</string>
    <string name="noFolders">Click "Add Folder" To Get Started</string>
    <string name="saveReceipt">Save Receipt</string>
    <string name="viewReceipt">View Receipt</string>
    <string name="save">Save</string>
    <string name="parseFailed">Failed to read image text, please manually enter values.</string>
    <string name="folderName">Folder Name</string>
    <string name="businessName">Business Name</string>
    <string name="businessNames">All Business Names</string>
    <string name="addFolderFailed">Folder creation failed, it might already exist under this name</string>
    <string name="addFolderSuccess">Folder Created</string>
    <string name="addReceiptFailed">Save Receipt Failed</string>
    <string name="addReceiptSuccess">Receipt Saved</string>
    <string name="savePhotoFailed">Failed To Save Photo</string>
    <string name="folderHeaderDescription">Folder Topper</string>
    <string name="receiptDescription">Saved Receipt</string>
    <string name="deleteFolderFailed">Could Not Delete Folder</string>
    <string name="selectFolder">- Select Folder -</string>
    <string name="selectFolderError">Please Select A Folder</string>
    <string name="folderAddFail">Please provide a business name and a folder name</string>
    <string name="receiptTotalError">The receipt total must be greater than 0</string>
</resources>